# STRINGDB

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: stringdb.sqlite  stringdb.ttl
docs/source/: api.md  conf.py  index.md  modules.md
docs/source/notebook/: test_manager.ipynb
feedback/: README.md  pytest_results_after_tqdm_installed.txt
notebook/: test_import_neo4j.ipynb  test_manager.ipynb
src/stringdb/: import_Neo4j.py  interaction_parser.py  manager.py  model.py  protein_parser.py
tests/: const.py  import_neo4j_test.py  interaction_parser_test.py  manager_test.py  protein_parser_test.py
tests/data/: stringdb.sqlite  uniprot_test.ttl
