[project]
name = "stringdb"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Phuong Thanh Nguyen", email = "s43pnguy@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.28",
    "pytest>=8.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
