[project]
name = "stringdb"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Phuong Thanh Nguyen", email = "s43pnguy@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.28",
    "rdflib>=7.0.0",
    "rdflib-neo4j>=1.0",
    "neo4j>=5.18.0",
    "tqdm>=4.66.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
doc = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "pandoc>=2.3",
    "nbsphinx>=0.9.3",
    "ipython>=8.22.2",
    "sphinx-autobuild>=2024.2.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
]
[tool.pytest.ini_options]
testpaths=['tests']
filterwarnings = ["ignore::DeprecationWarning"]
